finalisation de la physique simple, ajout de la hangigphysique